<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CrearPersonaActivity"
    android:nestedScrollingEnabled="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">
        <TextView
            style="@style/appTitles"
            android:text="Crear persona" />
        <ImageView
            android:src="@drawable/ic_team"
            style="@style/activityImage"
            />

        <TextView
            style="@style/appParameters"
            android:text="@string/primer_nombre"
            />
        <EditText
            android:id="@+id/etPrimerNombre"
            style="@style/appEditText"
            android:hint="@string/primer_nombre" />

        <TextView
            style="@style/appParameters"
            android:text="@string/segundo_nombre"
            />
        <EditText
            android:id="@+id/etSegundoNombre"
            style="@style/appEditText"
            android:text="@string/segundo_nombre" />

        <TextView
            style="@style/appParameters"
            android:text="@string/primer_apellido"
            />
        <EditText
            android:id="@+id/etPrimerApellido"
            style="@style/appEditText"
            android:text="@string/primer_apellido" />

        <TextView
            style="@style/appParameters"
            android:text="@string/segundo_apellido"
            />
        <EditText
            android:id="@+id/etSegundoApellido"
            style="@style/appEditText"
            android:text="@string/segundo_apellido" />

        <TextView
            style="@style/appParameters"
            android:text="@string/fecha_nacimiento"
            />

        <EditText
            android:id="@+id/etFechaNacimiento"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="00/00/0000"
            android:inputType="date" />


    </LinearLayout>
</ScrollView>