<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActualizarActivity"
    android:nestedScrollingEnabled="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">
        <TextView
            android:id="@+id/tvNombrePersona"
            style="@style/titlesStyle.appTitles"
            android:text="Actualizar persona" />
        <ImageView
            android:src="@drawable/ic_team"
            style="@style/activityImage"
            />

        <TextView
            style="@style/titlesStyle.appParameters"
            android:text="@string/primer_nombre"
            />
        <EditText
            android:id="@+id/etPrimerNombre"
            style="@style/appEditTextStyle"
            android:hint="@string/primer_nombre"
            android:inputType="textPersonName"/>

        <TextView
            style="@style/titlesStyle.appParameters"
            android:text="@string/segundo_nombre"
            />
        <EditText
            android:id="@+id/etSegundoNombre"
            style="@style/appEditTextStyle"
            android:hint="@string/segundo_nombre"
            android:inputType="textPersonName"/>

        <TextView
            style="@style/titlesStyle.appParameters"
            android:text="@string/primer_apellido"
            />
        <EditText
            android:id="@+id/etPrimerApellido"
            style="@style/appEditTextStyle"
            android:hint="@string/primer_apellido"
            android:inputType="textPersonName"/>

        <TextView
            style="@style/titlesStyle.appParameters"
            android:text="@string/segundo_apellido"
            />
        <EditText
            android:id="@+id/etSegundoApellido"
            style="@style/appEditTextStyle"
            android:hint="@string/segundo_apellido"
            android:inputType="textPersonName"/>

        <TextView
            style="@style/titlesStyle.appParameters"
            android:text="@string/fecha_nacimiento"
            />

        <EditText
            android:id="@+id/etFechaNacimiento"
            style="@style/appEditTextStyle"
            android:hint="00/00/0000"
            android:inputType="date" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <Button
                android:id="@+id/btnGuardar"
                style="@style/btnStyle.saveBtn"/>
            <Button
                android:id="@+id/btnCancelar"
                style="@style/btnStyle.cancelBtn"/>
        </LinearLayout>


    </LinearLayout>
</ScrollView>