<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MostrarPersonaActivity"
    android:nestedScrollingEnabled="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvNombrePersona"
            style="@style/titlesStyle.appTitles"
            android:text="Nombre persona" />
        <ImageView
            android:src="@drawable/ic_team"
            style="@style/activityImage"
            />
        <TextView
            style="@style/titlesStyle.appParameters"
            android:text="@string/primer_nombre"
            />
        <TextView
            android:id="@+id/tvPrimerNombre"
            style="@style/descriptionStyle.appDescription"
            android:text="@string/primer_nombre"
            />

        <TextView
            style="@style/titlesStyle.appParameters"
            android:text="@string/segundo_nombre"
            />
        <TextView
            android:id="@+id/tvSegundoNombre"
            style="@style/descriptionStyle.appDescription"
            android:text="@string/segundo_nombre"
            />

        <TextView
            style="@style/titlesStyle.appParameters"
            android:text="@string/primer_apellido"
            />
        <TextView
            android:id="@+id/tvPrimerApellido"
            style="@style/descriptionStyle.appDescription"
            android:text="@string/primer_apellido"
            />

        <TextView
            style="@style/titlesStyle.appParameters"
            android:text="@string/segundo_apellido"
            />
        <TextView
            android:id="@+id/tvSegundoApellido"
            style="@style/descriptionStyle.appDescription"
            android:text="@string/segundo_apellido"
            />

        <TextView
            style="@style/titlesStyle.appParameters"
            android:text="@string/fecha_nacimiento"
            />

        <TextView
            android:id="@+id/tvFechaNacimiento"
            style="@style/descriptionStyle.appDescription"
            android:text="@string/fecha_nacimiento"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">
            <Button
                android:id="@+id/btnActualizar"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/ic_update"
                android:layout_marginRight="24dp"/>
            <Button
                android:id="@+id/btnEliminar"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@drawable/ic_delete"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>